// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tests for LoginPage > should find loginMainText data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-h5 text-bold"
    data-testid="loginMainText"
    data-v-16d8eba4=""
  >
     Log in to the system 
  </p>,
}
`;

exports[`tests for LoginPage > should find loginSubText data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-body2"
    data-testid="loginSubText"
    data-v-16d8eba4=""
  >
     Please enter your credentials to access your account 
  </p>,
}
`;
